Update height property value to auto to fix spacing
Updated from min-content where this was causing excess grid gap between cards.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,7 +177,7 @@ main {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   display: flex;
   width: 660px;
-  height: min-content;
+  height: auto;
   padding: 24px 32px;
   justify-content: space-between;
 }
